feat: including two case studies for teaching and learning

--- a/book/references.bib
+++ b/book/references.bib
@@ -17,3 +17,32 @@
 }
 
 
+
+@article{damsbo2020,
+	title = {Predictors for wellbeing and characteristics of mental health after stroke},
+	author = {Damsbo, Andreas Gammelgaard and Kraglund, Kristian Lundsgaard and {Buttenschøn}, {Henriette Nørmølle} and Johnsen, {Søren Paaske} and Andersen, Grethe and Mortensen, Janne Kaergaard},
+	year = {2020},
+	month = {03},
+	date = {2020-03},
+	journal = {Journal of Affective Disorders},
+	pages = {358--364},
+	volume = {264},
+	doi = {10.1016/j.jad.2019.12.032},
+	url = {http://dx.doi.org/10.1016/j.jad.2019.12.032},
+	langid = {en}
+}
+
+@article{kraglund2018,
+	title = {Neuroregeneration and Vascular Protection by Citalopram in Acute Ischemic Stroke (TALOS)},
+	author = {Kraglund, Kristian Lundsgaard and Mortensen, Janne Kaergaard and Damsbo, Andreas Gammelgaard and Modrau, Boris and Simonsen, Sofie Amalie and Iversen, Helle Klingenberg and Madsen, Morten and Grove, Erik Lerkevang and Johnsen, {Søren Paaske} and Andersen, Grethe},
+	year = {2018},
+	month = {11},
+	date = {2018-11},
+	journal = {Stroke},
+	pages = {2568--2576},
+	volume = {49},
+	number = {11},
+	doi = {10.1161/strokeaha.117.020067},
+	url = {http://dx.doi.org/10.1161/STROKEAHA.117.020067},
+	langid = {en}
+}
