--- a/book/references.bib
+++ b/book/references.bib
@@ -46,3 +46,75 @@
 	url = {http://dx.doi.org/10.1161/STROKEAHA.117.020067},
 	langid = {en}
 }
+
+@article{kraglund2015,
+	title = {TALOS: a multicenter, randomized, double-blind, placebo-controlled trial to test the effects of citalopram in patients with acute stroke},
+	author = {Kraglund, Kristian and Mortensen, Janne and Grove, Erik and Johnsen, Sren Paaske and Andersen, Grethe},
+	year = {2015},
+	month = {08},
+	date = {2015-08},
+	journal = {International Journal of Stroke},
+	pages = {985--987},
+	volume = {10},
+	number = {6},
+	doi = {10.1111/ijs.12485},
+	url = {insights.ovid.com},
+	note = {PMID: 25854537},
+	langid = {ENGLISH}
+}
+
+@book{damsbo2023,
+	title = {agdamsbo/stRoke: stRoke 23.6.3},
+	author = {Damsbo, Andreas Gammelgaard},
+	year = {2023},
+	month = {07},
+	date = {2023-07-03},
+	publisher = {Zenodo},
+	doi = {10.5281/ZENODO.8013980},
+	url = {https://zenodo.org/record/8013980},
+	note = {DOI: 10.5281/ZENODO.8013980}
+}
+
+@article{berkhemer2015,
+	title = {A Randomized Trial of Intraarterial Treatment for Acute Ischemic Stroke},
+	author = {Berkhemer, Olvert A. and Fransen, Puck S.S. and Beumer, Debbie and van den Berg, Lucie A. and Lingsma, Hester F. and Yoo, Albert J. and Schonewille, Wouter J. and Vos, Jan Albert and Nederkoorn, Paul J. and Wermer, Marieke J.H. and van Walderveen, Marianne A.A. and Staals, Julie and Hofmeijer, Jeannette and van Oostayen, Jacques A. and {Lycklama à Nijeholt}, Geert J. and Boiten, Jelis and Brouwer, Patrick A. and Emmer, Bart J. and de Bruijn, Sebastiaan F. and van Dijk, Lukas C. and Kappelle, L. Jaap and Lo, Rob H. and van Dijk, Ewoud J. and de Vries, Joost and de Kort, Paul L.M. and van Rooij, Willem Jan J. and van den Berg, Jan S.P. and van Hasselt, Boudewijn A.A.M. and Aerden, Leo A.M. and Dallinga, {René J.} and Visser, Marieke C. and Bot, Joseph C.J. and Vroomen, Patrick C. and Eshghi, Omid and Schreuder, Tobien H.C.M.L. and Heijboer, Roel J.J. and Keizer, Koos and Tielbeek, Alexander V. and den Hertog, Heleen M. and Gerrits, Dick G. and van den Berg-Vos, Renske M. and Karas, Giorgos B. and Steyerberg, Ewout W. and Flach, H. Zwenneke and Marquering, Henk A. and Sprengers, Marieke E.S. and Jenniskens, Sjoerd F.M. and Beenen, Ludo F.M. and van den Berg, {René} and Koudstaal, Peter J. and van Zwam, Wim H. and Roos, Yvo B.W.E.M. and van der Lugt, Aad and van Oostenbrugge, Robert J. and Majoie, Charles B.L.M. and Dippel, Diederik W.J.},
+	year = {2015},
+	month = {01},
+	date = {2015-01-01},
+	journal = {New England Journal of Medicine},
+	pages = {11--20},
+	volume = {372},
+	number = {1},
+	doi = {10.1056/NEJMoa1411587},
+	url = {http://www.nejm.org/doi/10.1056/NEJMoa1411587},
+	langid = {en}
+}
+
+@article{blauenfeldt2023,
+	title = {Remote Ischemic Conditioning for Acute Stroke},
+	author = {Blauenfeldt, Rolf Ankerlund and Hjort, Niels and Valentin, Jan Brink and Homburg, Anne-Mette and Modrau, Boris and Sandal, Birgitte Forsom and Gude, Martin Faurholdt and Hougaard, Kristina Dupont and Damgaard, Dorte and Poulsen, Marika and Diedrichsen, Tove and Schmitz, Marie Louise and von Weitzel-Mudersbach, Paul and Christensen, Alex Alban and Figlewski, Krystian and Grove, Erik Lerkevang and {Hreiðarsdóttir}, {Margrét Katrín} and Lassesen, Henning Morthorst and Wittrock, Daniel and Mikkelsen, {Søren} and {Væggemose}, Ulla and Juelsgaard, Palle and Kirkegaard, Hans and Rostgaard-Knudsen, Martin and Degn, Niels and Vestergaard, Sigrid Breinholt and Damsbo, Andreas Gammelgaard and Iversen, Ane Bull and Mortensen, {Janne Kærgård} and Petersson, Jesper and Christensen, Thomas and Behrndtz, Anne Brink and {Bøtker}, Hans Erik and Gaist, David and Fisher, Marc and Hess, David Charles and Johnsen, {Søren Paaske} and Simonsen, Claus Ziegler and Andersen, Grethe},
+	year = {2023},
+	month = {10},
+	date = {2023-10-03},
+	journal = {JAMA},
+	pages = {1236},
+	volume = {330},
+	number = {13},
+	doi = {10.1001/jama.2023.16893},
+	url = {https://doi.org/10.1001/jama.2023.16893},
+	langid = {en}
+}
+
+@article{tissuep1995,
+	title = {Tissue Plasminogen Activator for Acute Ischemic Stroke},
+	year = {1995},
+	month = {12},
+	date = {1995-12-14},
+	journal = {New England Journal of Medicine},
+	pages = {1581--1588},
+	volume = {333},
+	number = {24},
+	doi = {10.1056/nejm199512143332401},
+	url = {http://dx.doi.org/10.1056/NEJM199512143332401},
+	langid = {en}
+}
