--- a/book/qa/qa.qmd
+++ b/book/qa/qa.qmd
@@ -9,8 +9,8 @@ Below we have collected some user questions and answers to help you get started 
 
 ### On summary statistics
 
->>> But I want to ask a question
->>> I want to know to get summary statistics for numeric variable. So how I can get for this program
+> But I want to ask a question
+> I want to know to get summary statistics for numeric variable. So how I can get for this program?
 
 You can find basic statistics mainly in two places. In the "Prepare" -> "Overview and filter" you can click "Browse observations". Here you can see basic statistics in the top row for each variable. In the "Evaluate" -> "Characteristics" you can generate a table to see some additional details. 
 
@@ -18,6 +18,6 @@ In the sidebar you can choose between "Minimal" or "Extensive" detail level.
 
 ### On data comparisons
 
->>> Then what about chi square value to see whether two categories related or not because I was seeing only correlation
+> Then what about chi square value to see whether two categories related or not because I was seeing only correlation?
 
-When you generate characteristics table, you can choose in sidebare to stratify (or group) the table and then to compare the strata (groups). This will give you relevant comparisons.
+When you generate characteristics table, you can choose in sidebar to stratify (or group) the table and then to compare the strata (groups). This will give you relevant comparisons.
